--- a/StarterProject.uproject
+++ b/StarterProject.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{0AC0854A-49A2-FEE2-1E86-A093B7BB3A4A}",
+	"EngineAssociation": "4.16",
 	"Category": "",
 	"Description": ""
 }
